# brainwave-app

./: .gitignore  CLAUDE.md  SYNTH_SUMMARY.md  next.config.ts  package.json  pnpm-lock.yaml  知君_260221_脳波生データ.xlsx  脳波チューニング・アプリ設計.docx  若年層向け音の周波数開発.docx  ６つの指標計算方法.docx
.github/workflows/: build-bridge.yml  deploy.yml  keep-supabase-alive.yml  tinykeys-macos.yml
TinyKeys/: .gitignore  CMakeLists.txt  LICENSE  Makefile  QuickStart.md  README.md  config.ini
TinyKeys/include/: audio_engine.h  data_config.h  platform.h  tui_renderer.h
TinyKeys/src/: audio_engine.c  data_config.c  main.c  platform_common.c  platform_internal.h  platform_linux.c  platform_mac.c  platform_null.c  tui_renderer.c
TinyKeys/tests/: test_core.c
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/log/: page.tsx
app/mind/: page.tsx
app/player/: page.tsx
app/profile/: page.tsx
app/synth/: page.tsx
bridge/: .env.example  BrainLinkBridge.spec  README.md  bridge_core.py  config.py  csv_logger.py  demo_source.py  gui.py  main.py  publisher.py  requirements.txt  thinkgear.py
components/: AudioProvider.tsx  AuthModal.tsx  AuthProvider.tsx  BottomNav.tsx  BrainAgeChart.tsx  BrainBandCompare.tsx  BrainBandPie.tsx  BrainRadarChart.tsx  BrainRadarCompare.tsx  BrainSpectrumChart.tsx  BrainSpectrumCompare.tsx  BrainTrendChart.tsx  BrainWeather.tsx  CustomAudioSection.tsx  CustomProgramCard.tsx  CymaticsCanvas.tsx  EegUploader.tsx  ExportDialog.tsx  Fullscreenable.tsx  IndicatorHelp.tsx  IndicatorInfoTooltip.tsx  Mixer.tsx  MoodSelector.tsx  PlaybackControls.tsx  ProgramCard.tsx  PublishedProgramCard.tsx  RangeSlider.tsx  SideNav.tsx  SimpleCalendar.tsx  SynthLayerCard.tsx  SynthPlaybackButton.tsx  SynthPresetCard.tsx  SynthTimelineStrip.tsx  SynthVibratoPanel.tsx  ThemeProvider.tsx  Timer.tsx  Visualizer.tsx
components/admin/: GroupManager.tsx  ProgramAssigner.tsx  UserList.tsx
docs/: 6指标算法说明.md  mindmap-脳特性-算法与数据说明.md
lib/: admin.ts  audio-analyser.ts  audio-context.ts  audio-engine.ts  audio-export.ts  brain-measurements.ts  brain-profile.ts  compare-colors.ts  custom-audio-db.ts  keep-alive.ts  nature-player.ts  programs.ts  ramp-scheduler.ts  supabase.ts  synth-engine.ts  theme.ts  timeline-engine.ts  utils.ts
store/: useAdminStore.ts  useAppStore.ts  useAuthStore.ts  useBrainProfileStore.ts  useCustomAudioStore.ts  useMindStore.ts  usePublishedProgramsStore.ts  useSynthStore.ts
(+25 files in other folders)
